# xi

./: .gitignore  CHANGELOG.md  LICENSE  NOTAS.md  PLAN.md  README.md  SETUP.md  package-lock.json  package.json
.claude/: launch.json
.develop/rules/: design.md
.github/: dependabot.yml
.github/workflows/: build-windows.yml  ci.yml  release.yml
apps/desktop/backend/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/backend/installer/: custom.nsi  xi-hooks.nsh
apps/desktop/backend/scripts/: pi-sessions.ts
apps/desktop/backend/src/: extensions.rs  main.rs
apps/desktop/backend/src/commands/: auth_config.rs  extension_ui.rs  extensions_config.rs  files.rs  pi_process.rs  pi_rpc.rs  pi_sessions.rs  recents.rs
apps/desktop/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/mobile/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/src/: lib.rs  main.rs
backend/: Cargo.toml  build.rs  tauri.conf.json
backend/capabilities/: default.json
backend/scripts/: pi-sessions.ts  sessions-helpers.ts
backend/src/: extensions.rs  main.rs
backend/src/commands/: atomic.rs  auth_config.rs  extension_ui.rs  extensions_config.rs  files.rs  mod.rs  pi_process.rs  pi_rpc.rs  pi_sessions.rs  pi_version.rs  recents.rs
docs/: ci-failures.md  ci-research.md  discoveries.md  edit-tool-panic-log.md  features.md  mejoras-seguridad.md  plan.md  roadmap.md  solidjs-migration-plan.md
docs/mobile/: 01-vision.md  02-arquitectura.md  03-protocolo.md  04-cliente-movil.md  05-conectividad-seguridad.md  06-roadmap-mvp.md  README.md
e2e/: package-lock.json  package.json  tsconfig.json  wdio.conf.ts
e2e/specs/: app.spec.ts  sessions.spec.ts  settings.spec.ts  welcome.spec.ts
extensions/pi-approve/: index.ts
extensions/pi-ask/: index.ts
extensions/pi-exa/: exa-config.json  index.ts
extensions/xi-tools/: .gitignore  Cargo.toml  index.ts
extensions/xi-tools/src/: bash.rs  edit.rs  grep.rs  ls.rs  main.rs  read.rs  write.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  router.ts
frontend/src/components/: chat-bubble.ts  chat-context-bar.ts  chat-input.ts  extension-ui-dialog.ts  file-list.ts  file-preview.ts  header.ts  input.ts  model-picker.ts  output.ts  sidebar.ts  thinking-block.ts
frontend/src/lib/: auth-status.ts  debug-panel.ts  format-tool-call.ts  icons.ts  markdown.ts  nav.ts  signal.ts  state.ts  stream-buffer.ts  updater.ts  (+1 more)
frontend/tests/: sessions-helpers.test.ts  setup.ts  state.test.ts  stream-bubble.test.ts
scripts/: build-pi-sessions.mjs  build-pi-sessions.sh  build-pi.mjs  build-pi.sh  bundle-extensions.mjs  bundle-extensions.sh  ensure-sidecars.js  ensure-sidecars.mjs  ensure-sidecars.sh  find-dead-code.mjs  find-dead-css.mjs
scripts/lib/: build-target.mjs
(+167 files in other folders)
