[package]
name = "xi-mobile"
version = "0.1.0"
edition = "2021"
# ponytail: Cargo.lock regenerado en el primer android build real

[lib]
name = "xi_mobile_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
